Replace logo svg and png, change table border color

--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -41,10 +41,10 @@
         <div class="footer-left running">
             <img src="{{ STATIC_ABS }}images/logo.jpg" alt="Ascent Assessment" />
         </div>
-        
+
         <div class="title-top">
             <div class="title-logo">
-                <img src="{{ STATIC_ABS }}images/logo-square.png" alt="Ascent Assessment for Teams"/>
+                <img src="{{ STATIC_ABS }}images/logo-square.png" alt="Ascent Assessment"/>
             </div>
             <h1 class="report-title">Final Report</h1>
             <p class="team-name">{{ team_name }}</p>
@@ -61,7 +61,7 @@
 
     <!-- TOC -->
     <section class="toc" style="page: toc;">
-        <h1>Contents</h1>
+        <h1>In This Report</h1>
         <ol class="toc-list" id="toc">
             <li data-target="#intro"><a href="#intro">Introduction</a></li>
             <li data-target="#model"><a href="#model">Review of the OrgHealth Ascent Model</a></li>
