--- a/apps/pdfexport/static/pdfexport/finalreport.css
+++ b/apps/pdfexport/static/pdfexport/finalreport.css
@@ -517,6 +517,7 @@ tr, th, td {
   width: 100%;
   table-layout: fixed;
   margin: 14pt 0 28pt;
+  border-color: var(--primary);
   font-family: var(--sans-font);
 }
 
@@ -558,6 +559,7 @@ tr, th, td {
   width: 100%;
   table-layout: fixed;
   margin: 30px 0 0;
+  border-color: var(--primary);
   font-family: var(--sans-font);
 }
 
