--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -39,7 +39,7 @@
 
         <!-- Running element used in footer; NOTE: causes page break -->
         <div class="footer-left running">
-            <img src="{{ STATIC_ABS }}images/logo.jpg" alt="Ascent Assessment" />
+            <img src="{{ STATIC_ABS }}images/logo.svg" alt="Ascent Assessment" />
         </div>
 
         <div class="title-top">
