--- a/apps/dashboard/templates/dashboard/includes/reports_list.html
+++ b/apps/dashboard/templates/dashboard/includes/reports_list.html
@@ -4,21 +4,21 @@
         <a href="{% url 'reports:reports_overview' %}" class="unstyled-link">See All</a>
     </div>
     <div class="card">
-                {% for report in reports|slice:":6" %}
+        {% if reports %}
             <ul class="table-list">
-                {% for report in reports %}
+                {% for report in reports|slice:":6" %}
                     <li class="table-row">
-                    <span class="row-left">
-                        {{ report.assessment.pretty_name }}
-                    </span>
-                    <span class="row-right">
-                        <a
-                            href="{% url 'reports:download_report' report.id %}"
-                            class="row-button"
-                            target="_blank"
-                            rel="noopener"
-                        >Download</a>
-                    </span>
+                        <span class="row-left">
+                            {{ report.assessment.pretty_name }}
+                        </span>
+                        <span class="row-right">
+                            <a
+                                href="{% url 'reports:download_report' report.id %}"
+                                class="row-button"
+                                target="_blank"
+                                rel="noopener"
+                            >Download</a>
+                        </span>
                     </li>
                 {% endfor %}
             </ul>
