Add double-click confirmation for delete Teams, Team members, Assessments, use participant snapshots so doing so won't break things

--- a/apps/assessments/templates/assessments/confirm_launch.html
+++ b/apps/assessments/templates/assessments/confirm_launch.html
@@ -30,6 +30,11 @@
         and provide other details if that hasn't yet been discussed.</p>
     </p>
     <p>As team members submit their responses, you will receive an update email.</p>
+
+    <div class="notice">
+        <p>NOTE: After launching this assessment, you will not be able to add or edit any of the information you have entered. Please double check participant names and emails carefully.</p>
+    </div>
+
     <br>
 
     <form method="post" class="element--actions-row">
