--- a/apps/pdfexport/static/pdfexport/finalreport.css
+++ b/apps/pdfexport/static/pdfexport/finalreport.css
@@ -27,8 +27,7 @@
 .footer-left img {
   height: 20pt;
   width: auto;
-  display: inline-block;
-  vertical-align: middle;
+  display: block;
 }
 
 @page {
@@ -517,6 +516,7 @@ tr, th, td {
   width: 100%;
   table-layout: fixed;
   margin: 14pt 0 28pt;
+  border-width: 1px;
   border-color: var(--primary);
   font-family: var(--sans-font);
 }
@@ -559,6 +559,7 @@ tr, th, td {
   width: 100%;
   table-layout: fixed;
   margin: 30px 0 0;
+  border-width: 1px;
   border-color: var(--primary);
   font-family: var(--sans-font);
 }
