--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -39,7 +39,9 @@
 
         <!-- Running element used in footer; NOTE: causes page break -->
         <div class="footer-left running">
-            <img src="{{ STATIC_ABS }}images/logo.svg" alt="Ascent Assessment" />
+            <img src="{{ STATIC_ABS }}images/logo.svg"
+                alt="Ascent Assessment"
+                width="80" height="20" />
         </div>
 
         <div class="title-top">
