Swap report footer logo in case of Docraptor caching

--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -39,7 +39,7 @@
 
         <!-- Running element used in footer; NOTE: causes page break -->
         <div class="footer-left running">
-            <img src="{{ STATIC_ABS }}images/logo.svg"
+            <img src="{{ STATIC_ABS }}images/logo-footer.svg"
                 alt="Ascent Assessment"
                 width="80" height="20" />
         </div>
