Inlining report footer logo to try to make it appear

--- a/apps/pdfexport/static/pdfexport/finalreport.css
+++ b/apps/pdfexport/static/pdfexport/finalreport.css
@@ -30,6 +30,13 @@
   display: block;
 }
 
+.footer-left svg {
+  height: 20pt;
+  width: auto;
+  display: block;
+}
+
+
 @page {
   margin: 1in 1in 1.15in;
 
