--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -29,6 +29,15 @@
         }
         html, body { font-family: "Metropolis", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
     </style>
+    <style>
+        @page {
+            background-image: url("{{ STATIC_ABS }}images/logo.png");
+            background-repeat: no-repeat;
+            background-position: 1in calc(100% - 0.9in);
+            background-size: 80px auto;
+        }
+        @page cover { background-image: none; }
+    </style>
     <link rel="stylesheet" href="{{ STATIC_ABS }}pdfexport/finalreport.css">
 </head>
 
@@ -36,8 +45,6 @@
 
     <!-- Title Page -->
     <div class="title-page avoid-break" style="page: cover;">
-
-        <!-- tried footer here and it doesn't create blank page but doesn't load logo -->
 
         <div class="title-top">
             <div class="title-logo">
@@ -54,30 +61,6 @@
                 <p class="">OrgHealth © {% now "Y" %}</p>
             </div>
         </div>
-    </div>
-
-    <!-- Running element used in footer (inline SVG to avoid external fetch in running content) -->
-    <div class="footer-left running" aria-hidden="true" style="opacity:0.001">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260 75" preserveAspectRatio="xMidYMid meet" role="img" aria-label="Ascent Assessment">
-        <circle cx="37.01" cy="40.49" r="27.46" fill="#b5eaea"/>
-        <path d="M30.83,22.96h0S1.7,47.24,1.7,47.24l23.66,11.09h0s29.13,13.66,29.13,13.66V3.24l-23.66,19.72ZM45.77,15.51l4.89,2.29v17.33l-18.2-8.53,13.31-11.09ZM44.03,42.78l-8.45,7.04-4.75-2.23v-10.98l5.01-4.18,8.18,3.84v6.51ZM13.87,42.1l13.12-10.94v23.7l-13.12-6.15v-6.61ZM50.65,42.26v16.95l-5.18,4.32-13.02-6.1,18.2-15.16Z" fill="#0093ed"/>
-        <path d="M92.32,30.15h-8.35l-1.23,3.07h-5.89l8.35-21.08h5.89l8.35,21.08h-5.89l-1.23-3.07ZM90.7,26.04l-2.55-6.47-2.55,6.47h5.09Z" fill="#0093ed"/>
-        <path d="M100.21,31.2l2.09-3.34c1.47,1.04,3.5,1.81,5.4,1.81,1.13,0,1.78-.37,1.78-.98,0-.77-1.04-1.07-2.61-1.44-3.07-.71-5.92-1.5-5.95-4.94,0-3.04,2.49-5.31,6.41-5.31,2.36,0,4.67.83,6.44,2.03l-1.9,3.41c-1.38-.89-3.1-1.57-4.54-1.57-.95,0-1.63.43-1.63.92,0,.71.67.86,2.55,1.35,2.82.67,5.98,1.6,5.98,5.22,0,3.19-2.58,5.25-6.66,5.25-2.67,0-5.43-.89-7.36-2.39Z" fill="#0093ed"/>
-        <path d="M116.07,25.28c0-4.51,4.05-8.29,8.84-8.29,2.7,0,4.88,1.1,6.41,2.82l-3.44,2.85c-.71-.77-1.9-1.35-3.01-1.35-2.06,0-3.8,1.81-3.8,3.93s1.75,4.02,3.8,4.02c1.14,0,2.36-.58,3.1-1.41l3.44,2.82c-1.56,1.78-3.77,2.92-6.57,2.92-4.76,0-8.78-3.8-8.78-8.32Z" fill="#0093ed"/>
-        <path d="M144.92,28.04l3.07,3.1c-1.41,1.44-4.14,2.46-6.51,2.46-4.91,0-8.53-3.47-8.53-8.35s3.5-8.25,8.29-8.25c5.03,0,7.98,3.68,7.98,9.73h-11.32c.49,1.59,1.75,2.67,3.44,2.67,1.23,0,2.64-.52,3.59-1.35ZM137.95,23.56h6.44c-.43-1.44-1.5-2.39-3.07-2.39s-2.82.92-3.38,2.39Z" fill="#0093ed"/>
-        <path d="M167.56,23.13v10.1h-4.97v-8.93c0-1.75-1.1-2.98-2.7-2.98s-2.79,1.2-2.79,2.76l-.03-.09v9.24h-5.19v-15.86h5.19v1.81c.98-1.35,2.67-2.18,4.66-2.18,3.41,0,5.83,2.55,5.83,6.14Z" fill="#0093ed"/>
-        <path d="M180.91,32.09c-.95.89-2.52,1.5-3.87,1.5-2.98,0-5.06-2.12-5.06-5.09v-7h-2.09v-4.14h2.09v-4.36h4.97v4.36h3.28v4.14h-3.28v6.04c0,1.01.61,1.72,1.44,1.72.58,0,1.17-.21,1.47-.52l1.04,3.34Z" fill="#0093ed"/>
-        <path d="M92.32,58.25h-8.35l-1.23,3.07h-5.89l8.35-21.08h5.89l8.35,21.08h-5.89l-1.23-3.07ZM90.7,54.13l-2.55-6.47-2.55,6.47h5.09Z" fill="#0093ed"/>
-        <path d="M100.21,59.29l2.09-3.34c1.47,1.04,3.5,1.81,5.4,1.81,1.13,0,1.78-.37,1.78-.98,0-.77-1.04-1.07-2.61-1.44-3.07-.71-5.92-1.5-5.95-4.94,0-3.04,2.49-5.31,6.41-5.31,2.36,0,4.67.83,6.44,2.03l-1.9,3.41c-1.38-.89-3.1-1.57-4.54-1.57-.95,0-1.63.43-1.63.92,0,.71.67.86,2.55,1.35,2.82.67,5.98,1.6,5.98,5.22,0,3.19-2.58,5.25-6.66,5.25-2.67,0-5.43-.89-7.36-2.39Z" fill="#0093ed"/>
-        <path d="M115.67,59.29l2.09-3.34c1.47,1.04,3.5,1.81,5.4,1.81,1.13,0,1.78-.37,1.78-.98,0-.77-1.04-1.07-2.61-1.44-3.07-.71-5.92-1.5-5.95-4.94,0-3.04,2.49-5.31,6.41-5.31,2.36,0,4.67.83,6.44,2.03l-1.9,3.41c-1.38-.89-3.1-1.57-4.54-1.57-.95,0-1.63.43-1.63.92,0,.71.67.86,2.55,1.35,2.82.67,5.98,1.6,5.98,5.22,0,3.19-2.58,5.25-6.66,5.25-2.67,0-5.43-.89-7.36-2.39Z" fill="#0093ed"/>
-        <path d="M143.51,56.13l3.07,3.1c-1.41,1.44-4.14,2.46-6.51,2.46-4.91,0-8.53-3.47-8.53-8.35s3.5-8.25,8.29-8.25c5.03,0,7.98,3.68,7.98,9.73h-11.32c.49,1.59,1.75,2.67,3.44,2.67,1.23,0,2.64-.52,3.59-1.35ZM136.54,51.65h6.44c-.43-1.44-1.5-2.39-3.07-2.39s-2.82.92-3.38,2.39Z" fill="#0093ed"/>
-        <path d="M149.3,59.29l2.09-3.34c1.47,1.04,3.5,1.81,5.4,1.81,1.13,0,1.78-.37,1.78-.98,0-.77-1.04-1.07-2.61-1.44-3.07-.71-5.92-1.5-5.95-4.94,0-3.04,2.49-5.31,6.41-5.31,2.36,0,4.67.83,6.44,2.03l-1.9,3.41c-1.38-.89-3.1-1.57-4.54-1.57-.95,0-1.63.43-1.63.92,0,.71.67.86,2.55,1.35,2.82.67,5.98,1.6,5.98,5.22,0,3.19-2.58,5.25-6.66,5.25-2.67,0-5.43-.89-7.36-2.39Z" fill="#0093ed"/>
-        <path d="M164.77,59.29l2.09-3.34c1.47,1.04,3.5,1.81,5.4,1.81,1.13,0,1.78-.37,1.78-.98,0-.77-1.04-1.07-2.61-1.44-3.07-.71-5.92-1.5-5.95-4.94,0-3.04,2.49-5.31,6.41-5.31,2.36,0,4.67.83,6.44,2.03l-1.9,3.41c-1.38-.89-3.1-1.57-4.54-1.57-.95,0-1.63.43-1.63.92,0,.71.67.86,2.55,1.35,2.82.67,5.98,1.6,5.98,5.22,0,3.19-2.58,5.25-6.66,5.25-2.67,0-5.43-.89-7.36-2.39Z" fill="#0093ed"/>
-        <path d="M206.9,51.22v10.13h-4.97v-9.21c0-1.6-1.04-2.73-2.52-2.73-1.56,0-2.67,1.07-2.67,2.52v9.42h-4.97v-9.21c0-1.6-1.04-2.73-2.52-2.73-1.57,0-2.67,1.07-2.67,2.52v9.39h-5.19v-15.86h5.19v2.06c.77-1.5,2.3-2.42,4.23-2.42,2.12,0,3.96,1.04,5,2.73.86-1.66,2.79-2.73,5.12-2.73,3.31,0,5.95,2.55,5.95,6.14Z" fill="#0093ed"/>
-        <path d="M221.48,56.13l3.07,3.1c-1.41,1.44-4.14,2.46-6.51,2.46-4.91,0-8.53-3.47-8.53-8.35s3.5-8.25,8.29-8.25c5.03,0,7.98,3.68,7.98,9.73h-11.32c.49,1.59,1.75,2.67,3.44,2.67,1.23,0,2.64-.52,3.59-1.35ZM214.51,51.65h6.44c-.43-1.44-1.5-2.39-3.07-2.39s-2.82.92-3.38,2.39Z" fill="#0093ed"/>
-        <path d="M244.12,51.22v10.1h-4.97v-8.93c0-1.75-1.1-2.98-2.7-2.98s-2.79,1.2-2.79,2.76l-.03-.09v9.24h-5.19v-15.86h5.19v1.81c.98-1.35,2.67-2.18,4.66-2.18,3.41,0,5.83,2.55,5.83,6.14Z" fill="#0093ed"/>
-        <path d="M257.47,60.18c-.95.89-2.52,1.5-3.87,1.5-2.98,0-5.06-2.12-5.06-5.09v-7h-2.09v-4.14h2.09v-4.36h4.97v4.36h3.28v4.14h-3.28v6.04c0,1.01.61,1.72,1.44,1.72.58,0,1.17-.21,1.47-.52l1.04,3.34Z" fill="#0093ed"/>
-        </svg>
     </div>
 
     <!-- TOC -->
