Add preview image of invitation email to launch confirm page

--- a/apps/assessments/templates/assessments/confirm_launch.html
+++ b/apps/assessments/templates/assessments/confirm_launch.html
@@ -25,14 +25,17 @@
 
     <p>Once you click Launch below, each team member will receive an email with a unique 
         link to complete their assessment and some basic instructions. </p>
-    <p>You can preview this invitation email if you'd like, but it is not editable. We
-        recommend communicating with your team separately to introduce the assessment
-        and provide other details if that hasn't yet been discussed.</p>
+    <p>You can <a href="{% static 'assessments/images/invitation-email-preview.jpg' %}" 
+        target="_blank">preview this invitation email</a> if you'd like, but it is not 
+        editable. We recommend communicating with your team separately to introduce the 
+        assessment and provide other details if that hasn't yet been discussed.</p>
     </p>
     <p>As team members submit their responses, you will receive an update email.</p>
 
     <div class="notice">
-        <p>NOTE: After launching this assessment, you will not be able to add or edit any of the information you have entered. Please double check participant names and emails carefully.</p>
+        <p>NOTE: After launching this assessment, you will not be able to add or edit any 
+            of the information you have entered. Please double check participant names and 
+            emails carefully.</p>
     </div>
 
     <br>
