Add sample report to dashboard report card

--- a/apps/dashboard/templates/dashboard/includes/reports_list.html
+++ b/apps/dashboard/templates/dashboard/includes/reports_list.html
@@ -27,7 +27,9 @@
             {% endif %}
         {% else %}
             <p>Reports you've purchased will show up here.</p>
-            <p>For a preview of what to expect, download this <a href="">partial sample report</a>.</p>
+            <p>For a preview of what to expect, download this <a href="{% static 
+                'documents/sample-final-report-preview.pdf' %}" target="_blank">partial 
+                sample report</a>.</p>
             <p class="helptext">Generating a report closes an assessment; once all 
                 participants have submitted their responses, purchase the final report 
                 in the Assessments section.</p>
